--- a/about_cn.html
+++ b/about_cn.html
@@ -220,11 +220,11 @@ body, html {
                       <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">服务</button>
                       <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
                         <a href="services_cn.html#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">自信儿童辅导</a>
-                        <a href="poster_cn.png" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">更多内容</a>
                         <a href="services_cn.html#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">个性化辅导</a>
                         <a href="services_cn.html#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">常见问题</a>
                       </div>
                     </div>
+                    <a href="case_cn.html" class="bubble-button text-sm whitespace-nowrap">成功案例</a>
                     <a href="https://forms.gle/gAEDk4SEbSSTN53B6" class="bubble-button text-sm whitespace-nowrap">预约免费咨询</a>
                   </nav>
 
