--- a/case.html
+++ b/case.html
@@ -189,112 +189,84 @@
   </header>
   
 
-   <!-- Hero Section -->
-   <section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
-    <div class="container mx-auto">
-      <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">Services</h2>
-      <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-4xl hero-heading"></p>
-    </div>
-  </section>
-  
-    <!-- About group section-->
-    <section id="group" class="py-16 bg-gray-50 px-4 sm:px-6 lg:px-8">
-        <div class="container mx-auto">
-          <div class="flex flex-wrap items-start">
-            <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
-              <img src="service_image1.png" alt="Confident Kids Coaching" class="w-full h-auto rounded-lg shadow-md">
-            </div>
-            <div class="w-full md:w-2/3">
-              <h3 class="text-2xl font-bold text-teal-600">Confident Kids Coaching Program</h3>
-              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                Whether or not kids believe in themselves will shape who they are and what they create in their lives. Powerful self-confidence isn't something kids either have or don't have. Believing in themselves, even after they've experienced a disappointment, is a skill that they can develop!
-              </p>
-              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                This program consists of 5 coaching sessions as follows to help kids learn how to believe in themselves when facing new things, move through fear, uncertainty and self-doubt, prepare their mind for success with "Power Shifting" and self-talk skills:
-              </p>
-              <ul class="mt-4 text-lg sm:text-base md:text-lg text-gray-700 list-disc list-inside">
-                <li>Session 1 - What is self-confidence</li>
-                <li>Session 2 - How Your Mind Shapes Your World</li>
-                <li>Session 3 - Neural Pathways & Managing Fear</li>
-                <li>Session 4 - Self-talk</li>
-                <li>Session 5 - Power Shifting</li>
-              </ul>
-        <a href="poster.png" class="mt-4 inline-block text-blue-600 underline hover:text-blue-800">Find more</a>
-            </div>
-          </div>
-        </div>
-      </section>
+  <!-- Hero Section -->
+<section class="min-h-screen bg-hero-image bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
+  <div class="container mx-auto">
+    <h2 class="text-3xl md:text-4xl lg:text-6xl hero-heading">Case Studies</h2>
+    <p class="mt-2 md:mt-4 text-base md:text-lg lg:text-2xl hero-heading text-gray-700">
 
-      <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
-        <div class="container mx-auto">
-          <a href="poster.png" target="_blank"
-             class="inline-block bg-gray-500 bg-opacity-50 text-3xl text-black rounded-full px-8 py-4 font-bold shadow-md
-                    hover:bg-opacity-75 transition-colors">
-            Find more
-          </a>
-        </div>
-      </section>
-      
+    </p>
+  </div>
+</section>
 
-    <!-- About 1 on 1 section -->
-    <section id="1on1" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
-        <div class="container mx-auto">
-          <div class="flex flex-wrap items-start">
-            <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
-              <img src="service_image2.png" alt="Personalized Coaching" class="w-full h-auto rounded-lg shadow-md">
-            </div>
-            <div class="w-full md:w-2/3">
-              <h3 class="text-2xl font-bold text-teal-600">Personalized Coaching Program</h3>
-              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                It consists of personalized individual sessions tailored to the specific needs of your child. A consultation plus a questionnaire to be completed by both parent and child will reveal what life skills to focus on and where to begin.
-              </p>
-              <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-                You can book an one-off introductory session before committing to a full program to help you and your child feel comfortable to further discover growth mindset and life skills.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-  
-
-              <!-- Hero Section -->
-    <section class="bg-hero-image3 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
-        <div class="container mx-auto">
-            </div>
-        </div>
-    </section>  
-
-    <!-- About 1 on 1 section -->
-    <section id="faq" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
-      <div class="container mx-auto">
-        <div class="flex flex-wrap items-start">
-          <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
-            <img src="service_image3.png" alt="Personalized Coaching" class="w-full h-auto rounded-lg shadow-md">
-          </div>
-          <div class="w-full md:w-2/3">
-            <h3 class="text-2xl font-bold text-teal-600">Frequently Asked Questions</h3>
-            <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
-              <b>What is life coaching for kids?</b><br><br>
-              Life coaching for kids is about empowering young people to live their best lives. Just as a sports coach helps athletes develop skills and confidence, a life coach guides children in developing their mindset skills. They learn to harness the power of their thoughts to cultivate happiness, confidence, and success.
-              <br><br>
-              <b>How is life coaching different from counseling?</b><br><br>
-              While counseling addresses deeper issues like anxiety or trauma, life coaching focuses on helping children achieve their goals and aspirations. It's about creating the future they desire, rather than resolving past issues.
-              <br><br>
-              <b>Isn't that the parent's job?</b><br><br>
-              Parenting plays a vital role, but life coaching goes beyond traditional parenting. It focuses on teaching children personal development and leadership skills, empowering them to become self-directed individuals. Life coaches work in partnership with parents to support children's growth and success. 
-              <br><br>
-              <b>My child does't have a problem ... is life coaching for him?</b><br><br>
-              Life coaching benefits all children. It equips them with valuable skills to navigate challenges and reach their full potential. These skills are invaluable throughout their lives.
-              <br><br>
-              <b>What is the Teaching Method of the Course?</b><br><br>
-              Currently, all courses we offer are delivered in the form of online Zoom meetings. However, if you live in Tokyo and would prefer your child to have in-person coaching sessions, we can arrange that. Please feel free to contact us for more information.
-
-            </p>
-          </div>
-        </div>
+<!-- Case 1 -->
+<section class="py-16 bg-white px-4 sm:px-6 lg:px-8" id="case1">
+  <div class="container mx-auto">
+    <div class="flex flex-wrap items-start">
+      <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
+        <img src="service_image1.png" alt="Case 1 - Liang" class="w-full h-auto rounded-lg shadow-md">
       </div>
-    </section>
+      <div class="w-full md:w-2/3">
+        <h3 class="text-2xl font-bold text-teal-600">Case 1: A 6-year-old boy — “I’m never a ZERO!”</h3>
+        <p class="mt-4 text-lg text-gray-700">
+          Liang was being told by his teacher that he was “bad all the time,” leaving his self-esteem shattered. After receiving zeros on his behavior chart for two straight months, he began telling his mom, “I was a zero again.”
+        </p>
+        <p class="mt-4 text-lg text-gray-700">
+          Through stories like <em>“Who’s Flying Your Plane?”</em> and <em>“Power Goggles”</em>, Liang learned that he could be the pilot of his thoughts. He began to shift from feeling like a “zero” to saying proudly, “I am a good boy, and I can make good choices.”
+        </p>
+        <p class="mt-4 text-lg text-gray-700">
+          Liang’s confidence grew. His teacher became more supportive, letting him lead LEGO projects. The principal even gave him a job delivering messages. His transformation not only brought joy to his family but reshaped his experience at school.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
+<!-- Case 2 -->
+<section class="py-16 bg-gray-50 px-4 sm:px-6 lg:px-8" id="case2">
+  <div class="container mx-auto">
+    <div class="flex flex-wrap items-start">
+      <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
+        <img src="service_image2.png" alt="Case 2 - Jeff" class="w-full h-auto rounded-lg shadow-md">
+      </div>
+      <div class="w-full md:w-2/3">
+        <h3 class="text-2xl font-bold text-teal-600">Case 2: A 10-year-old boy — “I can shift my anger and feel happier!”</h3>
+        <p class="mt-4 text-lg text-gray-700">
+          Jeff struggled with anger, sadness, and conflict at home and school. During coaching, he and his mom experienced an “aha” moment about how the mind works, helping Jeff feel empowered.
+        </p>
+        <p class="mt-4 text-lg text-gray-700">
+          Through practicing positive self-talk and understanding emotional control, Jeff became more confident and calm. He realized, “How I talk to myself is up to me. I can shift my anger and feel happier.”
+        </p>
+        <p class="mt-4 text-lg text-gray-700">
+          His mom noticed improved relationships at home and school, saying, “We are seeing big changes in Jeff and the rest of the family.” A transformation sparked by coaching, communication, and understanding.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Case 3 -->
+<section class="py-16 bg-white px-4 sm:px-6 lg:px-8" id="case3">
+  <div class="container mx-auto">
+    <div class="flex flex-wrap items-start">
+      <div class="w-full md:w-1/3 pr-4 mb-4 md:mb-0">
+        <img src="service_image3.png" alt="Case 3 - Zoe" class="w-full h-auto rounded-lg shadow-md">
+      </div>
+      <div class="w-full md:w-2/3">
+        <h3 class="text-2xl font-bold text-teal-600">Case 3: A 12-year-old girl — “I’m wearing my Power Goggles!”</h3>
+        <p class="mt-4 text-lg text-gray-700">
+          Zoe was shy and hesitant to share her feelings. Through the <strong>MindPower™</strong> and <strong>MePower™</strong> workshops, she discovered the tools to manage her thoughts and emotions.
+        </p>
+        <p class="mt-4 text-lg text-gray-700">
+          She now looks forward to her empowerment workshops. “We’ve learned we can change the ‘goggles’ we wear. I’m wearing my ‘Power Goggles’ not my ‘Victim Goggles’!”
+        </p>
+        <p class="mt-4 text-lg text-gray-700">
+          Zoe’s mom shared, “These skills should be taught in school—just like reading and math. My daughter has benefited so much, and I encourage every parent to send their child.”
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
         <!-- Contact Section -->
         <section id="contact" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
