--- a/services_cn.html
+++ b/services_cn.html
@@ -143,11 +143,11 @@
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">服务</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
       <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">自信儿童辅导</a>
-      <a href="poster_cn.png" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">更多内容</a>
       <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">个性化辅导</a>
       <a href="#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">常见问题</a>
     </div>
   </div>
+  <a href="case_cn.html" class="bubble-button text-sm whitespace-nowrap">成功案例</a>
   <a href="https://forms.gle/gAEDk4SEbSSTN53B6" class="bubble-button text-sm whitespace-nowrap">预约免费咨询</a>
 </nav>
 
@@ -205,13 +205,15 @@
               <p class="mt-4 text-lg sm:text-base md:text-lg text-gray-700">
                 课程由5次课组成，全部课程结束之后提供专属家长的30分钟交流时间，分享孩子的课程参与情况，为未来在思维技能培养方面提供建议。
 				</p>
-              <ul class="mt-4 text-lg sm:text-base md:text-lg text-gray-700 list-disc list-inside">
-                <li>第一课- 什么是自信和它的重要性</li>
-                <li>第二课- 我们的想法是怎么形成的</li>
-                <li>第三课- 什么是神经回路和怎么战胜恐惧</li>
-                <li>第四课- 什么是正向的自我对话</li>
-                <li>第五课- 面对挫折怎么转变视角培养韧性</li>
-              </ul>
+        <ul class="mt-4 text-lg sm:text-base md:text-lg text-gray-700 list-disc list-inside">
+          <li>第一课- 什么是自信和它的重要性</li>
+          <li>第二课- 我们的想法是怎么形成的</li>
+          <li>第三课- 什么是神经回路和怎么战胜恐惧</li>
+          <li>第四课- 什么是正向的自我对话</li>
+          <li>第五课- 面对挫折怎么转变视角培养韧性</li>
+        </ul>
+        <a href="poster_cn.png" class="mt-4 inline-block text-blue-600 underline hover:text-blue-800">更多内容</a>
+        
             </div>
           </div>
         </div>
@@ -219,11 +221,6 @@
 
       <section class="bg-hero-image2 bg-cover bg-center text-base text-center py-8 md:py-16 px-4 md:px-8">
         <div class="container mx-auto">
-          <a href="poster_cn.png" target="_blank"
-             class="inline-block bg-gray-500 bg-opacity-50 text-3xl text-black rounded-full px-8 py-4 font-bold shadow-md
-                    hover:bg-opacity-75 transition-colors">
-            更多内容
-          </a>
         </div>
       </section>
       
