--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                           <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">Services</button>
                           <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
                             <a href="services.html#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
-                            <a href="poster.png" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">Find more</a>
                             <a href="services.html#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
                             <a href="services.html#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">FAQs</a>
                           </div>
                         </div>
+                        <a href="case.html" class="bubble-button text-sm whitespace-nowrap">Case Studies</a>
                         <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="bubble-button text-sm whitespace-nowrap">Book a Session</a>
                       </nav>
     
