--- a/case.html
+++ b/case.html
@@ -148,9 +148,9 @@
   <div class="relative">
     <button class="bubble-button text-sm whitespace-nowrap dropdown-toggle" data-dropdown="services">Services</button>
     <div class="dropdown-content hidden absolute bg-white shadow-md mt-2 py-2 rounded-md" id="services-dropdown">
-      <a href="#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
-      <a href="#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
-      <a href="#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">FAQs</a>
+      <a href="services.html#group" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Confident Kids Coaching</a>
+      <a href="services.html#1on1" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
+      <a href="services.html#faq" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">FAQs</a>
     </div>
   </div>
   <a href="case.html" class="bubble-button text-sm whitespace-nowrap">Case Studies</a>
@@ -183,6 +183,7 @@
                   <a href="services.html#1on1" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
                   <a href="services.html#faq" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">FAQs</a>
               </div>
+              <a href="case.html" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Case Studies</a>
               <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Book a Session</a>
           </div>
       </div>
@@ -284,56 +285,8 @@
       </footer>
       
 
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-  const mobileMenuButton = document.querySelector('.mobile-menu');
-  const mobileDropdown = document.querySelector('.mobile-dropdown');
-  const dropdownButtons = document.querySelectorAll('.mobile-dropdown > button');
-  const desktopDropdownToggles = document.querySelectorAll('.dropdown-toggle');
+<script src="mobile-menu.js"></script>
 
-  mobileMenuButton.addEventListener('click', function() {
-    mobileDropdown.classList.toggle('show');
-  });
-
-  dropdownButtons.forEach(button => {
-    button.addEventListener('click', function() {
-      const submenu = this.nextElementSibling;
-      submenu.classList.toggle('hidden');
-    });
-  });
-
-  desktopDropdownToggles.forEach(toggle => {
-    toggle.addEventListener('click', function(e) {
-      e.stopPropagation();
-      const dropdownId = this.getAttribute('data-dropdown');
-      const dropdown = document.getElementById(`${dropdownId}-dropdown`);
-      
-      // Close all other dropdowns
-      document.querySelectorAll('.dropdown-content').forEach(d => {
-        if (d !== dropdown) {
-          d.classList.add('hidden');
-        }
-      });
-
-      // Toggle the clicked dropdown
-      dropdown.classList.toggle('hidden');
-    });
-  });
-
-  document.addEventListener('click', function(e) {
-    if (!mobileMenuButton.contains(e.target) && !mobileDropdown.contains(e.target)) {
-      mobileDropdown.classList.remove('show');
-    }
-
-    if (!e.target.closest('.relative')) {
-      document.querySelectorAll('.dropdown-content').forEach(dropdown => {
-        dropdown.classList.add('hidden');
-      });
-    }
-  });
-});
-
-    </script>
 
 </body>
 </html>
