--- a/services_cn.html
+++ b/services_cn.html
@@ -177,6 +177,7 @@
                   <a href="services_cn.html#1on1" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">Personalized Coaching</a>
                   <a href="services_cn.html#faq" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">常见问题</a>
               </div>
+              <a href="case_cn.html" class="block py-2 px-4 text-gray-800 hover:bg-gray-200"> 成功案例 </a>
               <a href="https://forms.gle/dDbxdmzhCLjb1Bob8" class="block py-2 px-4 text-gray-800 hover:bg-gray-200">预约课程</a>
           </div>
       </div>
@@ -300,56 +301,7 @@
       <footer class="bg-teal-600 text-white text-center py-4">
           <p>&copy; 2024 Connected Coaching & Consulting. All Rights Reserved.</p>
       </footer>
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-  const mobile关于我nuButton = document.querySelector('.mobile-menu');
-  const mobileDropdown = document.querySelector('.mobile-dropdown');
-  const dropdownButtons = document.querySelectorAll('.mobile-dropdown > button');
-  const desktopDropdownToggles = document.querySelectorAll('.dropdown-toggle');
-
-  mobile关于我nuButton.addEventListener('click', function() {
-    mobileDropdown.classList.toggle('show');
-  });
-
-  dropdownButtons.forEach(button => {
-    button.addEventListener('click', function() {
-      const submenu = this.nextElementSibling;
-      submenu.classList.toggle('hidden');
-    });
-  });
-
-  desktopDropdownToggles.forEach(toggle => {
-    toggle.addEventListener('click', function(e) {
-      e.stopPropagation();
-      const dropdownId = this.getAttribute('data-dropdown');
-      const dropdown = document.getElementById(`${dropdownId}-dropdown`);
-      
-      // Close all other dropdowns
-      document.querySelectorAll('.dropdown-content').forEach(d => {
-        if (d !== dropdown) {
-          d.classList.add('hidden');
-        }
-      });
-
-      // Toggle the clicked dropdown
-      dropdown.classList.toggle('hidden');
-    });
-  });
-
-  document.addEventListener('click', function(e) {
-    if (!mobile关于我nuButton.contains(e.target) && !mobileDropdown.contains(e.target)) {
-      mobileDropdown.classList.remove('show');
-    }
-
-    if (!e.target.closest('.relative')) {
-      document.querySelectorAll('.dropdown-content').forEach(dropdown => {
-        dropdown.classList.add('hidden');
-      });
-    }
-  });
-});
-
-    </script>
+ <script src="mobile-menu.js"></script>
 
 </body>
 </html>
